# Yoshinani

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  HANDOFF.md  LICENSE
.claude/skills/verify-ime/: SKILL.md
.spec/: MAIN_SPEC.md
.spec/sub-specs/: README.md  phase0-architecture.md  phase0-build-system.md  phase0-test-harness.md  phase1-input-mode.md  phase1-preedit-lifecycle.md  phase1-trigger-commit.md  phase1-tsf-skeleton.md  phase2-preedit-integration.md  phase2-romaji-kana.md  phase3-auto-commit.md  phase3-conversion-queue.md  phase3-converter-port.md  phase3-ipc-pipe.md  phase3-zenz-daemon.md  phase4-android-adapter.md  phase4-async.md  phase4-dictionary-style.md  phase4-segment-color.md  phase4-speed-opt.md
scripts/: build.ps1  requirements-build.txt  verify-ime.ps1
src/core/: CMakeLists.txt
src/core/application/: ContextHistory.h  ConversionQueue.cpp  ConversionQueue.h  InputMode.h  InputSession.h  PreeditView.h  Settings.cpp  Settings.h
src/core/domain/: TriggerPolicy.cpp  TriggerPolicy.h
src/core/domain/ports/: IKanaKanjiConverter.h
src/ipc/: CMakeLists.txt  HttpJson.cpp  HttpJson.h  OllamaKanaKanjiConverter.cpp  OllamaKanaKanjiConverter.h  OpenAiKanaKanjiConverter.cpp  OpenAiKanaKanjiConverter.h  Placeholder.cpp  Utf.h
src/tray/: CMakeLists.txt  SettingsWindow.cpp  SettingsWindow.h  main.cpp  resource.h  yoshinani-tray.manifest  yoshinani-tray.rc
src/tsf/: CMakeLists.txt  ClassFactory.cpp  ClassFactory.h  ConvertMarshaller.cpp  ConvertMarshaller.h  DisplayAttribute.cpp  DisplayAttribute.h  EditSession.h  Globals.cpp  Globals.h  KeyMap.cpp  KeyMap.h  Register.cpp  Register.h  TextService.cpp  TextService.h  dllmain.cpp  resource.h  yoshinani-tsf.rc
tests/core/: CMakeLists.txt  test_context_history.cpp  test_conversion_queue.cpp  test_input_mode.cpp  test_input_session.cpp  test_settings.cpp  test_trigger_policy.cpp
